--- a/.github/workflows/build-base-image.yml
+++ b/.github/workflows/build-base-image.yml
@@ -79,7 +79,40 @@ jobs:
         php: [ '8.1' ]
         librdkafka: [ 'v1.8.2' ]
         extrdkafka: [ '5.0.2', '6.0.0' ]
-        laravel: [ '8', '9' ]
+        laravel: [ '8', '9', '10' ]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: build/base
+          build-args: |
+            PHP_VERSION=${{ matrix.php }}
+            LIBRDKAFKA_VERSION=${{ matrix.librdkafka }}
+            EXT_RDKAFKA_VERSION=${{ matrix.extrdkafka }}
+            LARAVEL_VERSION=${{ matrix.laravel }}
+          push: true
+          tags: arquivei/php-kafka-consumer:${{ matrix.php }}-${{ matrix.librdkafka }}-${{ matrix.extrdkafka }}-${{ matrix.laravel }}
+
+  build-base-image-php82:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        php: [ '8.2' ]
+        librdkafka: [ 'v2.3.0' ]
+        extrdkafka: [ '5.0.2', '6.0.0' ]
+        laravel: [ '9', '10' '11' ]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
