--- a/.github/workflows/build-base-image.yml
+++ b/.github/workflows/build-base-image.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         php: [ '7.4' ]
-        librdkafka: [ 'v1.8.2' ]
+        librdkafka: [ 'v1.9.2', 'v2.5.0' ]
         extrdkafka: [ '3.0.5', '3.1.2', '4.0.4', '4.1.2', '5.0.2' ]
         laravel: [ '6', '7', '8' ]
     steps:
@@ -44,9 +44,9 @@ jobs:
     strategy:
       matrix:
         php: [ '8.0' ]
-        librdkafka: [ 'v1.8.2' ]
+        librdkafka: [ 'v1.9.2', 'v2.5.0' ]
         extrdkafka: [ '5.0.2', '6.0.0' ]
-        laravel: [ '7', '8', '9' ]
+        laravel: [ '6', '7', '8', '9' ]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -77,9 +77,9 @@ jobs:
     strategy:
       matrix:
         php: [ '8.1' ]
-        librdkafka: [ 'v1.8.2' ]
+        librdkafka: [ 'v1.9.2', 'v2.5.0' ]
         extrdkafka: [ '5.0.2', '6.0.0' ]
-        laravel: [ '8', '9' ]
+        laravel: [ '8', '9', '10' ]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -105,3 +105,68 @@ jobs:
           push: true
           tags: arquivei/php-kafka-consumer:${{ matrix.php }}-${{ matrix.librdkafka }}-${{ matrix.extrdkafka }}-${{ matrix.laravel }}
 
+  build-base-image-php82:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        php: [ '8.2' ]
+        librdkafka: [ 'v1.9.2', 'v2.5.0' ]
+        extrdkafka: [ '5.0.2', '6.0.0' ]
+        laravel: [ '9', '10', '11' ]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: build/base
+          build-args: |
+            PHP_VERSION=${{ matrix.php }}
+            LIBRDKAFKA_VERSION=${{ matrix.librdkafka }}
+            EXT_RDKAFKA_VERSION=${{ matrix.extrdkafka }}
+            LARAVEL_VERSION=${{ matrix.laravel }}
+          push: true
+          tags: arquivei/php-kafka-consumer:${{ matrix.php }}-${{ matrix.librdkafka }}-${{ matrix.extrdkafka }}-${{ matrix.laravel }}
+
+  build-base-image-php83:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        php: [ '8.3' ]
+        librdkafka: [ 'v1.9.2', 'v2.5.0' ]
+        extrdkafka: [ '5.0.2', '6.0.0' ]
+        laravel: [ '10', '11' ]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: build/base
+          build-args: |
+            PHP_VERSION=${{ matrix.php }}
+            LIBRDKAFKA_VERSION=${{ matrix.librdkafka }}
+            EXT_RDKAFKA_VERSION=${{ matrix.extrdkafka }}
+            LARAVEL_VERSION=${{ matrix.laravel }}
+          push: true
+          tags: arquivei/php-kafka-consumer:${{ matrix.php }}-${{ matrix.librdkafka }}-${{ matrix.extrdkafka }}-${{ matrix.laravel }}
