--- a/.github/workflows/version-test.yml
+++ b/.github/workflows/version-test.yml
@@ -7,13 +7,13 @@ on:
     branches: [ master ]
 
 jobs:
-  run-tests:
+  run-tests-74:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         php: [7.4]
-        librdkafka: [v1.8.2]
-        extrdkafka: [3.0.5, 3.1.2, 4.0.4, 4.1.2, 5.0.2]
+        librdkafka: [v1.9.2, v2.5.0]
+        extrdkafka: [3.0.5, 3.1.3, 4.0.4, 4.1.2, 5.0.2, 6.0.3]
         laravel: [6, 7, 8]
     steps:
       - uses: actions/checkout@v2
@@ -24,36 +24,49 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php: ["8.0"]
-        librdkafka: [v1.8.2]
-        extrdkafka: [5.0.2, 6.0.0]
-        laravel: [8, 9]
+        php: [8.0]
+        librdkafka: [v1.9.2, v2.5.0]
+        extrdkafka: [3.0.5, 3.1.3, 4.0.4, 4.1.2, 5.0.2, 6.0.3]
+        laravel: [6, 7, 8, 9]
     steps:
       - uses: actions/checkout@v2
       - name: Test ${{ matrix.php }}-${{ matrix.librdkafka }}-${{ matrix.extrdkafka }}-${{ matrix.laravel }}
         run:
           make version-test-${{ matrix.php }}-${{ matrix.librdkafka }}-${{ matrix.extrdkafka }}-${{ matrix.laravel }}
-  run-tests-8-laravel-7:
+  run-tests-81:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php: ["8.0"]
-        librdkafka: [v1.8.2]
-        extrdkafka: [5.0.2]
-        laravel: [7]
+        php: [8.1]
+        librdkafka: [v1.9.2, v2.5.0]
+        extrdkafka: [3.0.5, 3.1.3, 4.0.4, 4.1.2, 5.0.2, 6.0.3]
+        laravel: [8, 9, 10]
     steps:
       - uses: actions/checkout@v2
       - name: Test ${{ matrix.php }}-${{ matrix.librdkafka }}-${{ matrix.extrdkafka }}-${{ matrix.laravel }}
         run:
           make version-test-${{ matrix.php }}-${{ matrix.librdkafka }}-${{ matrix.extrdkafka }}-${{ matrix.laravel }}
-  run-tests-8-1:
+  run-tests-82:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php: ["8.1"]
-        librdkafka: [v1.8.2]
-        extrdkafka: [5.0.2, 6.0.0]
-        laravel: [8, 9]
+        php: [8.2]
+        librdkafka: [v1.9.2, v2.5.0]
+        extrdkafka: [3.0.5, 3.1.3, 4.0.4, 4.1.2, 5.0.2, 6.0.3]
+        laravel: [9, 10, 11]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Test ${{ matrix.php }}-${{ matrix.librdkafka }}-${{ matrix.extrdkafka }}-${{ matrix.laravel }}
+        run:
+          make version-test-${{ matrix.php }}-${{ matrix.librdkafka }}-${{ matrix.extrdkafka }}-${{ matrix.laravel }}
+  run-tests-83:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        php: [8.3]
+        librdkafka: [v1.9.2, v2.5.0]
+        extrdkafka: [3.0.5, 3.1.3, 4.0.4, 4.1.2, 5.0.2, 6.0.3]
+        laravel: [10, 11]
     steps:
       - uses: actions/checkout@v2
       - name: Test ${{ matrix.php }}-${{ matrix.librdkafka }}-${{ matrix.extrdkafka }}-${{ matrix.laravel }}
